test-gateway-api/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-smoke
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      hostname: gateway-smoke.local

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-smoke
spec:
  parentRefs:
    - name: gateway-smoke
  hostnames:
    - gateway-smoke.local
  rules:
    - backendRefs:
        - name: gateway-smoke
          port: 80
